tests/netconvert/import/XML/errors/broken_edge/edge#tonode__empty1/errors.netconvert
Error: Attribute 'to' in definition of a edge is empty.
Quitting (on error).
